--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,3 +19,9 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_events";
+@import "sections/_faq";
+@import "sections/_friends";
+@import "sections/_hero";
+@import "sections/_trails";
+@import "sections/_visit";
