--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,3 +1,7 @@
 /* =============
     Typography
 ============= */
+
+// font-family: 'Poppins', sans-serif;
+// font-family: 'DM Serif Text', serif;
+// font-family: 'Lexend Deca', sans-serif;
