--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -18,3 +18,12 @@ $screen-xl-min: 1200px;
 // Colors
 $white: #fff;
 $black: #000;
+$tan: #FEF7E1;
+$orange: #F5A623;
+$agua: #4BC1B4;
+$tree: #94C83D;
+$sun: #F5DA4C;
+
+$gradient-dark: linear-gradient(180deg, #4A4A4A 0%, #1D1F20 100%);
+$gradient-bright: linear-gradient(270deg, #F5DA4C 0%, #FEF7E1 91%);
+$gradient-green: linear-gradient(180deg, #4BC1B4 0%, #94C83D 100%);
