--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,9 +19,12 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_contact";
 @import "sections/_events";
 @import "sections/_faq";
 @import "sections/_friends";
+@import "sections/_gallery";
 @import "sections/_hero";
-@import "sections/_trails";
+@import "sections/_plan";
+@import "sections/_trail";
 @import "sections/_visit";
