--- a/css/styles.css
+++ b/css/styles.css
@@ -311,12 +311,76 @@ template {
 /* =============
     Base
 ============= */
+h1, h2, h3, h4, h5, p, ul, figure {
+  margin: 0;
+  padding: 0; }
+
+ul li {
+  list-style: none; }
+
+a:link, a:visited, :hover {
+  text-decoration: none;
+  transition: 0.25s; }
+
+.content-grid {
+  display: grid;
+  grid-template-areas: ". content ."; }
+  .content-grid > div {
+    grid-area: content; }
+
 /* =============
     Typography
 ============= */
+h1, h2, h3,
+h1 {
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 2rem;
+  line-height: 2.5rem; }
+  h1 span, h2 span, h3 span,
+  h1 span {
+    color: #F8EFD3;
+    font-family: 'DM Serif Text', serif;
+    font-size: 3.5rem;
+    letter-spacing: 1px;
+    line-height: 3.5rem; }
+
+h2 {
+  color: #000;
+  font-family: 'DM Serif Text', serif;
+  font-size: 2rem;
+  line-height: 2.5rem; }
+  h2 span {
+    color: #000;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 2.5rem;
+    line-height: 2.5rem; }
+
+p {
+  color: #000;
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem; }
+
+h3 {
+  color: #000;
+  font-family: 'DM Serif Text', serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem; }
+
 /* =============
     Buttons
 ============= */
+button {
+  background: #F8EFD3;
+  border-bottom: 4px solid #4BC1B4;
+  border-radius: 32px;
+  font-family: 'DM Serif Text', serif;
+  font-size: 1.25rem;
+  color: #000;
+  letter-spacing: 0.0625rem;
+  line-height: 2.5rem;
+  padding: 4px 16px; }
+
 /* =============
     Forms
 ============= */
@@ -335,9 +399,431 @@ textarea {
 /* =============
     Navigation
 ============= */
+#burger-icon {
+  background-color: #000;
+  border-radius: 8px;
+  border: none;
+  font-size: 1.4375rem;
+  color: #F5A623;
+  outline: none;
+  padding: 10px 12px 8px 12px;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  z-index: 100; }
+
+#burger-icon:hover {
+  background-color: #000;
+  color: #F5A623; }
+
 /* =============
     Header
 ============= */
+header {
+  background-color: #F8EFD3;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  display: flex;
+  justify-content: flex-end; }
+
 /* =============
     Footer
 ============= */
+footer {
+  padding: 40px 0px 80px 0px;
+  background-image: url("../img/hills/footer.svg");
+  background-size: cover;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: linear-gradient(180deg, #F8EFD3 0%, #F5DA4C 140%); }
+  footer h1 {
+    color: #000;
+    font-family: 'DM Serif Text', serif;
+    font-size: 2rem;
+    letter-spacing: 1px;
+    line-height: 2.5rem;
+    text-align: center;
+    padding: 0 32px; }
+  footer ul {
+    display: flex;
+    justify-content: center; }
+    footer ul li {
+      padding: 16px 16px; }
+      footer ul li a:link,
+      footer ul li a:visited {
+        color: #000;
+        font-size: 2.5rem; }
+      footer ul li a:active,
+      footer ul li a:hover {
+        color: #F5A623; }
+  footer div {
+    display: flex;
+    justify-content: center; }
+
+/* =============
+    Contact
+============= */
+#contact {
+  background: #4A4A4A;
+  display: grid;
+  display: block;
+  padding: 40px 0px 80px 0px;
+  margin: 0 auto; }
+  #contact > div h1 {
+    padding: 24px;
+    color: #4BC1B4; }
+  #contact > div div {
+    width: 80%;
+    padding: 0 24px; }
+    #contact > div div input {
+      background-color: #000;
+      border: none;
+      border-bottom: 8px solid #4BC1B4;
+      color: #F8EFD3;
+      display: block;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 400;
+      margin: 16px 0;
+      outline: none;
+      padding: 16px 8px;
+      width: 100%; }
+
+/* =============
+    Events
+============= */
+#events {
+  padding: 0px 0px 80px 0px;
+  background-color: #4A4A4A; }
+  #events h2 {
+    color: #F8EFD3;
+    padding-top: 80px;
+    padding-left: 24px; }
+    #events h2 span {
+      color: #4BC1B4; }
+  #events > div button {
+    position: relative;
+    top: 24px; }
+  #events > div:nth-child(2) {
+    background-color: #94C83D;
+    padding: 24px 24px 0px;
+    margin: 24px 24px 56px; }
+  #events > div:nth-child(3) {
+    background-color: #F5DA4C;
+    padding: 24px 24px 0px;
+    margin: 24px 24px 56px; }
+  #events > div:nth-child(4) {
+    background-color: #F5A623;
+    padding: 24px 24px 0px;
+    margin: 24px 24px 56px; }
+
+/* =============
+    FAQ
+============= */
+#faq {
+  padding: 40px 0px 0px 0px; }
+  #faq h2 {
+    color: #000;
+    text-align: right; }
+    #faq h2 span {
+      color: #F8EFD3; }
+  #faq > div:nth-child(1) {
+    background: linear-gradient(45deg, #4BC1B4 0%, #94C83D 110%);
+    padding: 24px;
+    width: 50%;
+    grid-area: faq; }
+  #faq > div:nth-child(2) {
+    grid-area: questions;
+    padding: 16px; }
+    #faq > div:nth-child(2) ul li {
+      padding: 24px 8px 32px; }
+    #faq > div:nth-child(2) ul h3 {
+      padding-bottom: 8px; }
+    #faq > div:nth-child(2) span {
+      color: #4BC1B4; }
+      #faq > div:nth-child(2) span:hover {
+        background-color: #F5A623;
+        color: #fff; }
+    #faq > div:nth-child(2) div {
+      display: flex; }
+      #faq > div:nth-child(2) div div:nth-child(1),
+      #faq > div:nth-child(2) div div:nth-child(4) {
+        background-color: #F5DA4C;
+        border-radius: 32px;
+        height: 32px;
+        margin: 0 8px;
+        width: 32px; }
+      #faq > div:nth-child(2) div div:nth-child(2),
+      #faq > div:nth-child(2) div div:nth-child(5) {
+        background-color: #94C83D;
+        border-radius: 32px;
+        height: 32px;
+        margin: 0 8px;
+        width: 32px; }
+      #faq > div:nth-child(2) div div:nth-child(3),
+      #faq > div:nth-child(2) div div:nth-child(6) {
+        background-color: #4BC1B4;
+        border-radius: 32px;
+        height: 32px;
+        margin: 0 8px;
+        width: 32px; }
+  #faq > div:nth-child(3) {
+    background-image: url("../img/faq/green-hill.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    display: flex;
+    height: 457px;
+    width: 100%; }
+  #faq aside {
+    height: 160px;
+    background-image: url("../img/hills/green-hill.png");
+    background-size: cover;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex; }
+    @media (min-width: 576px) {
+      #faq aside {
+        height: 240px;
+        background-position: -220px center; } }
+    @media (min-width: 768px) {
+      #faq aside {
+        height: 320px;
+        background-position: center; } }
+
+/* =============
+    Friends
+============= */
+#friends {
+  padding: 40px 24px 80px 24px; }
+  #friends h2 {
+    color: #000;
+    padding-bottom: 24px; }
+    #friends h2 span {
+      color: #4BC1B4; }
+  #friends p {
+    padding-bottom: 24px; }
+  #friends .friend-card {
+    margin: 24px 0; }
+    #friends .friend-card h3 {
+      background-color: #F5DA4C;
+      padding: 8px 24px; }
+    #friends .friend-card p {
+      background: #F8EFD3;
+      padding: 16px 24px;
+      box-shadow: 0 7px 16px 2px rgba(206, 206, 206, 0.3); }
+    #friends .friend-card span {
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.125rem; }
+  #friends ul li:nth-child(1), #friends ul li:nth-child(2), #friends ul li:nth-child(3) {
+    border-bottom: 8px solid #4BC1B4; }
+  #friends ul li:nth-child(4), #friends ul li:nth-child(5), #friends ul li:nth-child(6) {
+    border-bottom: 8px solid #F5A623; }
+
+/* =============
+    Visit
+============= */
+#gallery > div:nth-child(2) {
+  background-color: #4BC1B4;
+  height: 32px; }
+
+#gallery > div:nth-child(3) {
+  background-color: #F5DA4C;
+  height: 16px; }
+
+#gallery > div:nth-child(4) {
+  background-color: #F8EFD3;
+  height: 48px; }
+
+#gallery > div:nth-child(5) {
+  background-color: #F5A623;
+  height: 40px; }
+
+/* =============
+    Hero
+============= */
+#hero div:nth-child(1) {
+  height: 457px;
+  background-image: url("../img/hero/hero.jpg");
+  background-size: cover;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex; }
+
+#hero div:nth-child(2) {
+  padding: 40px 0px;
+  display: inline-block;
+  align-self: center;
+  background: linear-gradient(180deg, #94C83D 40%, #4BC1B4 120%); }
+
+/* =============
+    Plan
+============= */
+#plan {
+  display: grid;
+  grid-template-areas: "plan" "activities";
+  grid-template-rows: repeat(2, auto);
+  margin: 0 auto;
+  background: #4A4A4A;
+  padding: 40px 0px 80px 0px; }
+  #plan h2 {
+    padding-left: 24px;
+    padding-bottom: 40px;
+    color: #F8EFD3; }
+    #plan h2 span {
+      color: #4BC1B4; }
+  #plan h3 {
+    color: #000;
+    font-family: 'DM Serif Text', serif;
+    font-size: 2rem;
+    line-height: 2rem;
+    padding-left: 24px; }
+  #plan div:nth-child(1) {
+    grid-area: plan; }
+  #plan div:nth-child(2) {
+    grid-area: activities; }
+    #plan div:nth-child(2) aside {
+      margin-top: 40px;
+      padding-bottom: 80px;
+      padding-left: 16px; }
+      #plan div:nth-child(2) aside > div:nth-child(2) h3 {
+        color: #4BC1B4;
+        border-bottom: 24px solid #000;
+        line-height: 2px; }
+      #plan div:nth-child(2) aside > div:nth-child(2) p {
+        color: #fff;
+        border-left: 8px solid #94C83D;
+        margin-top: 24px;
+        padding-left: 16px;
+        padding-right: 24px; }
+      #plan div:nth-child(2) aside > div:nth-child(2) span {
+        background-color: #F5DA4C; }
+    #plan div:nth-child(2) aside:nth-child(1) {
+      grid-area: hike; }
+      #plan div:nth-child(2) aside:nth-child(1) div:nth-child(1) {
+        background-image: url("../img/plan/hike.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        height: 280px;
+        width: 100%;
+        margin-bottom: 40px; }
+    #plan div:nth-child(2) aside:nth-child(2) {
+      grid-area: bike; }
+      #plan div:nth-child(2) aside:nth-child(2) div:nth-child(1) {
+        background-image: url("../img/plan/bike.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        height: 280px;
+        width: 100%;
+        margin-bottom: 40px; }
+    #plan div:nth-child(2) aside:nth-child(3) {
+      grid-area: run; }
+      #plan div:nth-child(2) aside:nth-child(3) div:nth-child(1) {
+        background-image: url("../img/plan/run.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top center;
+        display: flex;
+        height: 280px;
+        width: 100%;
+        margin-bottom: 40px; }
+
+/* =============
+    Trail
+============= */
+#trail {
+  background-color: #fff; }
+  #trail h2 {
+    padding: 80px 24px 40px 24px; }
+    #trail h2 span {
+      color: #4BC1B4; }
+  #trail > div:nth-child(1) {
+    background-color: #4BC1B4;
+    height: 32px; }
+  #trail > div:nth-child(2) {
+    background-color: #F5DA4C;
+    height: 48px; }
+  #trail > div:nth-child(3) {
+    background-color: #F8EFD3;
+    height: 16px; }
+  #trail > div:nth-child(4) {
+    background-color: #F5A623;
+    height: 40px; }
+  #trail div div {
+    margin-bottom: 72px;
+    padding-left: 16px; }
+    #trail div div h3 {
+      font-family: 'DM Serif Text', serif;
+      padding-bottom: 8px; }
+    #trail div div p {
+      padding-bottom: 12px; }
+    #trail div div span {
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.125rem; }
+  #trail > div:nth-child(6) {
+    border-left: 8px solid #F5A623; }
+    #trail > div:nth-child(6) span {
+      background-color: #F5A623; }
+  #trail > div:nth-child(7) {
+    border-left: 8px solid #F8EFD3; }
+    #trail > div:nth-child(7) span {
+      background-color: #F8EFD3; }
+  #trail > div:nth-child(8) {
+    border-left: 8px solid #4BC1B4; }
+    #trail > div:nth-child(8) span {
+      background-color: #4BC1B4; }
+  #trail > div:nth-child(9) {
+    border-left: 8px solid #F5DA4C; }
+    #trail > div:nth-child(9) span {
+      background-color: #F5DA4C; }
+  #trail aside {
+    height: 160px;
+    background-image: url("../img/hills/green-hill.png");
+    background-size: cover;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex; }
+    @media (min-width: 576px) {
+      #trail aside {
+        height: 240px;
+        background-position: -220px center; } }
+    @media (min-width: 768px) {
+      #trail aside {
+        height: 320px;
+        background-position: center; } }
+
+/* =============
+    Visit
+============= */
+#visit {
+  margin: 0 auto;
+  display: grid;
+  grid-template-areas: "visit" "visitors";
+  grid-template-rows: repeat(2, auto);
+  padding: 40px 24px 80px 24px; }
+  #visit h2 {
+    hyphens: auto; }
+    #visit h2 span {
+      color: #F5A623; }
+  #visit p {
+    padding-top: 24px; }
+  #visit button {
+    margin: 24px 16px 0 0; }
+  #visit div:nth-child(1) {
+    grid-area: visit; }
+  #visit div:nth-child(2) {
+    grid-area: visitors; }
+  #visit div:nth-child(3) {
+    display: flex;
+    justify-content: flex-end; }
+    #visit div:nth-child(3) img {
+      padding: 40px;
+      height: 240px; }
