--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,42 @@
 /* =============
     Base
 ============= */
+
+h1,h2,h3,h4,h5,p,ul,figure{
+    margin: 0;
+    padding: 0;
+}
+
+
+// header,section,footer{
+//     margin: 0;
+//     padding: 0 24px;
+//     @include md{
+//         padding: 0 32px;
+//     }
+//     @include lg{
+//         padding: 0 40px;
+//     }
+// }
+
+ul{
+    li{
+        list-style: none;
+    }
+}
+
+a:link, a:visited, :hover{
+    text-decoration: none;
+    transition: 0.25s;
+}
+
+.content-grid{
+    display: grid;
+    // grid-template-columns: 10px auto 10px;
+    grid-template-areas: ". content .";
+    // padding: 60px 0;
+
+    >div{
+        grid-area: content;
+    }
+}
