--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,7 +1,52 @@
 /* =============
     Typography
 ============= */
-
 // font-family: 'Poppins', sans-serif;
 // font-family: 'DM Serif Text', serif;
 // font-family: 'Lexend Deca', sans-serif;
+
+h1, h2, h3,
+
+h1 {
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: rem-calc(32);
+    line-height: rem-calc(40);
+
+    span {
+        color: $tan;
+        font-family: 'DM Serif Text', serif;
+        font-size: rem-calc(56);
+        letter-spacing: 1px;
+        line-height: rem-calc(56);
+    }
+}
+
+h2 {
+
+    color: $black;
+    font-family: 'DM Serif Text', serif;
+    font-size: rem-calc(32);
+    line-height: rem-calc(40);
+
+    span {
+        color: $black;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: rem-calc(40);
+        line-height: rem-calc(40);
+    }
+}
+
+p {
+    color: $black;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: rem-calc(16);
+    line-height: rem-calc(24);
+}
+
+h3{
+    color: $black;
+    font-family: 'DM Serif Text', serif;
+    // font-family: 'Poppins', sans-serif;
+    font-size: rem-calc(20);
+    line-height: rem-calc(28);
+}
