--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,3 +1,22 @@
 /* =============
     Navigation
 ============= */
+
+#burger-icon {
+    background-color: $black;
+    border-radius: 8px;
+    border: none;
+    font-size: rem-calc(23);
+    color: $orange;
+    outline: none;
+    padding: 10px 12px 8px 12px;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 100;
+}
+
+#burger-icon:hover {
+    background-color: $black;
+    color: $orange;
+}
