--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,3 +1,62 @@
 /* =============
     Footer
 ============= */
+footer{
+    padding: 40px 0px 80px 0px;
+    background-image: url('../img/hills/footer.svg');
+    background-size: cover;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: linear-gradient(180deg, $tan 0%, $sun 140%);
+
+
+    h1{
+        color: $black;
+        font-family: 'DM Serif Text', serif;
+        font-size: rem-calc(32);
+        letter-spacing: 1px;
+        line-height: rem-calc(40);
+        text-align: center;
+        padding: 0 32px;
+    }
+
+    ul {
+        display: flex;
+        justify-content: center;
+
+        li {
+            padding: 16px 16px;
+
+            a:link,
+            a:visited {
+                color: $black;
+                font-size: rem-calc(40);
+            }
+
+            a:active,
+            a:hover {
+                color: $orange;
+            }
+        }
+    }
+
+    div{
+        display: flex;
+        justify-content: center;
+    }
+
+    // aside{
+    //     height: 240px;
+    //     background-image: url('../img/hills/trail.svg');
+    //     background-size: cover;
+    //     width: 100%;
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    //     display: flex;
+    //     @include sm{
+    //         height: 300px;
+    //         background-position: center center;
+    //     }
+    // }
+}
