--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,13 @@
 /* =============
     Header
 ============= */
+
+header{
+    background-color: $tan;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    justify-content: flex-end;
+
+}
