--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -1,3 +1,43 @@
 /* =============
     Events
 ============= */
+#events{
+    padding: 0px 0px 80px 0px;
+    background-color: $midnight;
+
+    h2{
+        color: $tan;
+        padding-top: 80px;
+        padding-left: 24px;
+
+        span{
+            color: $agua;
+        }
+    }
+
+    >div{
+        button{
+            position: relative;
+            top: 24px;
+        }
+    }
+
+    >div:nth-child(2){
+        background-color: $tree;
+        padding: 24px 24px 0px;
+        margin: 24px 24px 56px;
+    }
+
+    >div:nth-child(3){
+        background-color: $sun;
+        padding: 24px 24px 0px;
+        margin: 24px 24px 56px;
+    }
+
+    >div:nth-child(4){
+        background-color: $orange;
+        padding: 24px 24px 0px;
+        margin: 24px 24px 56px;
+    }
+
+}
