--- a/scss/sections/_faq.scss
+++ b/scss/sections/_faq.scss
@@ -1,3 +1,106 @@
 /* =============
     FAQ
 ============= */
+#faq {
+    padding: 40px 0px 0px 0px;
+
+    h2{
+        color: $black;
+        text-align: right;
+        span{
+            color: $tan;
+        }
+    }
+    > div:nth-child(1) {
+        background: linear-gradient(45deg, $agua 0%, $tree 110%);
+        padding: 24px;
+        width: 50%;
+        grid-area: faq;
+    }
+
+    > div:nth-child(2) {
+        grid-area: questions;
+        padding: 16px;
+
+        ul {
+            li {
+                padding: 24px 8px 32px;
+            }
+
+            h3 {
+                padding-bottom: 8px;
+            }
+        }
+
+        span {
+            color: $agua;
+
+            &:hover {
+                background-color: $orange;
+                color: $white;
+            }
+        }
+
+
+        div {
+            display: flex;
+            // padding: 16px;
+
+            div:nth-child(1),
+            div:nth-child(4) {
+                background-color: $sun;
+                border-radius: 32px;
+                height: 32px;
+                margin: 0 8px;
+                width: 32px;
+            }
+
+            div:nth-child(2),
+            div:nth-child(5) {
+                background-color: $tree;
+                border-radius: 32px;
+                height: 32px;
+                margin: 0 8px;
+                width: 32px;
+            }
+
+            div:nth-child(3),
+            div:nth-child(6) {
+                background-color: $agua;
+                border-radius: 32px;
+                height: 32px;
+                margin: 0 8px;
+                width: 32px;
+            }
+        }
+    }
+
+    > div:nth-child(3) {
+        background-image: url("../img/faq/green-hill.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center right;
+        display: flex;
+        height: 457px;
+        width: 100%;
+    }
+
+
+    aside{
+        height: 160px;
+        background-image: url('../img/hills/green-hill.png');
+        background-size: cover;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        @include sm{
+            height: 240px;
+            background-position: -220px center;
+        }
+        @include md{
+            height: 320px;
+            background-position: center;
+        }
+    }
+}
