--- a/scss/sections/_friends.scss
+++ b/scss/sections/_friends.scss
@@ -1,3 +1,48 @@
 /* =============
     Friends
 ============= */
+
+#friends{
+padding: 40px 24px 80px 24px;
+
+h2 {
+    color: $black;
+    padding-bottom: 24px;
+    span {
+        color: $agua;
+    }
+}
+
+p{
+    padding-bottom: 24px;
+}
+
+.friend-card{
+    margin: 24px 0;
+
+
+    h3{
+        background-color: $sun;
+        padding: 8px 24px;
+    }
+    p{
+        background: $tan;
+        padding: 16px 24px;
+        box-shadow: 0 7px 16px 2px rgba(206,206,206,0.30);
+
+    }
+    span{
+        font-family: 'Poppins', sans-serif;
+        font-size: rem-calc(18);
+    }
+}
+
+ul{
+    li:nth-child(1),li:nth-child(2),li:nth-child(3) {
+        border-bottom: 8px solid $agua;
+    }
+    li:nth-child(4),li:nth-child(5),li:nth-child(6) {
+        border-bottom: 8px solid $orange;
+    }
+}
+}
