--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -13,7 +13,7 @@ h1 {
     line-height: rem-calc(40);
 
     span {
-        color: $tan;
+        color: $light;
         font-family: 'DM Serif Text', serif;
         font-size: rem-calc(56);
         letter-spacing: 1px;
