--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -17,8 +17,9 @@ $screen-xl-min: 1200px;
 
 // Colors
 $white: #fff;
+$off-white: #EEFCFF;
 $black: #000;
-$tan: #F8EFD3;
+$light: #D5F8FF;
 $orange: #F5A623;
 $agua: #4BC1B4;
 $tree: #94C83D;
@@ -26,7 +27,8 @@ $sun: #F5DA4C;
 $mud: #8B5B46;
 $midnight: #4A4A4A;
 
+
 // gradients
 // background: linear-gradient(45deg, $agua 0%, $tree 100%);
 // background: linear-gradient(60deg, $midnight 0%, $black 100%);
-// background: linear-gradient(270deg, $tan 0%, $sun 100%);
+// background: linear-gradient(270deg, $light 0%, $sun 100%);
