--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -6,7 +6,7 @@
     background-color: $midnight;
 
     h2{
-        color: $tan;
+        color: $light;
         padding-top: 80px;
         padding-left: 24px;
 
