--- a/scss/sections/_plan.scss
+++ b/scss/sections/_plan.scss
@@ -12,7 +12,7 @@
     h2 {
         padding-left: 24px;
         padding-bottom: 40px;
-        color: $tan;
+        color: $light;
         span {
             color: $agua;
         }
