--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,13 +2,13 @@
     Buttons
 ============= */
 button {
-    background: $tan;
+    background: $light;
+    border: none;
     border-bottom: 4px solid $agua;
-    border-radius: 32px;
-    font-family: 'DM Serif Text', serif;
-    font-size: rem-calc(20);
     color: $black;
-    letter-spacing: rem-calc(1);
-    line-height: rem-calc(40);
-    padding: 4px 16px;
+    font-family: 'Poppins', sans-serif;
+    font-size: rem-calc(16);
+    letter-spacing: rem-calc(1.5);
+    line-height: rem-calc(24);
+    padding: 8px 16px 4px;
 }
