--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,7 +8,7 @@ footer{
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-color: linear-gradient(180deg, $tan 0%, $sun 140%);
+    background-color: linear-gradient(180deg, $light 0%, $sun 140%);
 
 
     h1{
