--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,7 +3,7 @@
 ============= */
 
 header{
-    background-color: $tan;
+    background-color: $light;
     width: 100%;
     position: fixed;
     z-index: 100;
