--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -23,7 +23,7 @@
                 background-color: $black;
                 border: none;
                 border-bottom: 8px solid $agua;
-                color: $tan;
+                color: $light;
                 display: block;
                 font-family: 'Poppins', sans-serif;
                 font-weight: 400;
