--- a/scss/sections/_friends.scss
+++ b/scss/sections/_friends.scss
@@ -4,6 +4,7 @@
 
 #friends{
 padding: 40px 24px 80px 24px;
+background: $off-white;
 
 h2 {
     color: $black;
@@ -26,9 +27,9 @@ p{
         padding: 8px 24px;
     }
     p{
-        background: $tan;
+        background: $white;
         padding: 16px 24px;
-        box-shadow: 0 7px 16px 2px rgba(206,206,206,0.30);
+        box-shadow: 0 7px 16px 2px rgba(206,206,206,0.40);
 
     }
     span{
