--- a/scss/sections/_gallery.scss
+++ b/scss/sections/_gallery.scss
@@ -11,7 +11,7 @@
         height: 16px;
     }
     >div:nth-child(4){
-        background-color: $tan;
+        background-color: $light;
         height: 48px;
     }
     >div:nth-child(5){
