--- a/scss/sections/_trail.scss
+++ b/scss/sections/_trail.scss
@@ -22,7 +22,7 @@
         height: 48px;
     }
     >div:nth-child(3){
-        background-color: $tan;
+        background-color: $light;
         height: 16px;
     }
     >div:nth-child(4){
@@ -58,9 +58,9 @@
     }
 
     >div:nth-child(7){
-        border-left: 8px solid $tan;
+        border-left: 8px solid $light;
         span{
-            background-color: $tan;
+            background-color: $light;
         }
     }
 
