--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,7 +5,7 @@
 // font-family: 'DM Serif Text', serif;
 // font-family: 'Lexend Deca', sans-serif;
 
-h1, h2, h3,
+
 
 h1 {
     font-family: 'Lexend Deca', sans-serif;
@@ -13,7 +13,7 @@ h1 {
     line-height: rem-calc(40);
 
     span {
-        color: $light;
+        color: $off-white;
         font-family: 'DM Serif Text', serif;
         font-size: rem-calc(56);
         letter-spacing: 1px;
