--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -12,7 +12,7 @@
 
         h1 {
             padding: 24px;
-            color: $agua;
+            color: $light;
         }
 
         div {
@@ -22,7 +22,7 @@
             input {
                 background-color: $black;
                 border: none;
-                border-bottom: 8px solid $agua;
+                border-bottom: 4px solid $agua;
                 color: $light;
                 display: block;
                 font-family: 'Poppins', sans-serif;
