--- a/scss/sections/_plan.scss
+++ b/scss/sections/_plan.scss
@@ -12,7 +12,7 @@
     h2 {
         padding-left: 24px;
         padding-bottom: 40px;
-        color: $light;
+        color: $off-white;
         span {
             color: $agua;
         }
@@ -41,7 +41,7 @@
 
             > div:nth-child(2) {
                 h3 {
-                    color: $agua;
+                    color: $sun;
                     border-bottom: 24px solid $black;
                     line-height: 2px;
                 }
