--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -17,7 +17,7 @@ $screen-xl-min: 1200px;
 
 // Colors
 $white: #fff;
-$off-white: #EEFCFF;
+$off-white: #FFF5D5;
 $black: #000;
 $light: #D5F8FF;
 $orange: #F5A623;
