--- a/scss/sections/_gallery.scss
+++ b/scss/sections/_gallery.scss
@@ -2,17 +2,19 @@
     Visit
 ============= */
 #gallery{
+
+    // colored bars
     >div:nth-child(2){
-        background-color: $agua;
-        height: 32px;
+        background-color: $off-white;
+        height: 48px;
     }
     >div:nth-child(3){
         background-color: $sun;
         height: 16px;
     }
     >div:nth-child(4){
-        background-color: $light;
-        height: 48px;
+        background-color: $agua;
+        height: 32px;
     }
     >div:nth-child(5){
         background-color: $orange;
