--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -4,20 +4,20 @@
 
 // Define the breakpoints
 // Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
+$screen-sm-min: 498px;
 
 // Small tablets (portrait view)
-$screen-md-min: 768px;
+$screen-md-min: 789px;
 
 // Tablets and small desktops
-$screen-lg-min: 992px;
+$screen-lg-min: 968px;
 
 // Large tablets and desktops
-$screen-xl-min: 1200px;
+$screen-xl-min: 1210px;
 
 // Colors
 $white: #fff;
-$off-white: #FFF5D5;
+$off-white: #FCF4DA;
 $black: #000;
 $light: #D5F8FF;
 $orange: #F5A623;
