--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,13 +2,5 @@
     Buttons
 ============= */
 button {
-    background: $light;
-    border: none;
-    border-bottom: 4px solid $agua;
-    color: $black;
-    font-family: 'Poppins', sans-serif;
-    font-size: rem-calc(16);
-    letter-spacing: rem-calc(1.5);
-    line-height: rem-calc(24);
-    padding: 8px 16px 4px;
+    @include btn-style;
 }
