--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -139,9 +139,50 @@ html {
 
 
 @mixin green-gradient{
-    background: linear-gradient(45deg, $agua 0%, $tree 60%)
+    background: linear-gradient(180deg, $agua 0%, $tree 120%);
 }
 
-// @include shadow-style{
-//     box-shadow: 0 7px 16px 2px rgba(206,206,206,0.40);
-// }
+@mixin shadow-style-light{
+    box-shadow: 0 7px 16px 2px rgba(206,206,206,0.40);
+}
+
+@mixin shadow-style-dark{
+    box-shadow: 0 3px 90px 0 rgba(0,0,0,0.40);
+}
+
+
+@mixin btn-style{
+    background: $light;
+    border: none;
+    outline: none;
+    border-bottom: 4px solid $agua;
+    color: $black;
+    font-family: 'Poppins', sans-serif;
+    font-size: rem-calc(16);
+    letter-spacing: rem-calc(1.5);
+    line-height: rem-calc(24);
+    padding: 8px 16px 4px;
+    :hover{
+        background: $orange;
+        border-bottom: 4px solid $sun;
+        color: $white;
+    }
+}
+
+@mixin link-style{
+    border: none;
+    outline: none;
+    border-bottom: 4px solid $agua;
+    color: $light;
+    font-family: 'Poppins', sans-serif;
+    font-size: rem-calc(16);
+    letter-spacing: rem-calc(1.5);
+    line-height: rem-calc(24);
+    :hover{
+        color: $orange;
+    }
+}
+
+@mixin section-padding{
+    padding: 0px 0px 80px 0px;
+}
