--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,60 +3,62 @@
 ============= */
 footer{
     padding: 40px 0px 80px 0px;
-    background-image: url('../img/hills/footer.svg');
+    // background-image: url('../img/hills/footer.svg');
     background-size: cover;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-color: linear-gradient(180deg, $light 0%, $sun 140%);
+    background: $off-white;
 
+    display: grid;
+    grid-template-areas:
+    ". footer .";
+    grid-template-columns: 10% 80% 10%;
 
-    h1{
-        color: $black;
-        font-family: 'DM Serif Text', serif;
-        font-size: rem-calc(32);
-        letter-spacing: 1px;
-        line-height: rem-calc(40);
-        text-align: center;
-        padding: 0 32px;
+    @include md{
+        grid-template-columns: 30% 40% 30%;
     }
 
-    ul {
-        display: flex;
-        justify-content: center;
-
-        li {
-            padding: 16px 16px;
-
-            a:link,
-            a:visited {
-                color: $black;
-                font-size: rem-calc(40);
-            }
-
-            a:active,
-            a:hover {
-                color: $orange;
-            }
-        }
-    }
 
     div{
-        display: flex;
-        justify-content: center;
+        grid-area: footer;
+        h1{
+            color: $black;
+            text-decoration: underline;
+            text-decoration-color: $agua;
+            font-family: 'DM Serif Text', serif;
+            font-size: rem-calc(32);
+            letter-spacing: 1px;
+            line-height: rem-calc(40);
+            text-align: center;
+            padding: 0px 0px 16px;
+        }
+
+        ul {
+            display: flex;
+            justify-content: center;
+
+            li {
+                padding: 16px 16px;
+
+                a:link,
+                a:visited {
+                    color: $black;
+                    font-size: rem-calc(40);
+                }
+
+                a:active,
+                a:hover {
+                    color: $orange;
+                }
+            }
+        }
+
+        div{
+            display: flex;
+            justify-content: center;
+        }
+
     }
 
-    // aside{
-    //     height: 240px;
-    //     background-image: url('../img/hills/trail.svg');
-    //     background-size: cover;
-    //     width: 100%;
-    //     background-repeat: no-repeat;
-    //     background-position: center;
-    //     display: flex;
-    //     @include sm{
-    //         height: 300px;
-    //         background-position: center center;
-    //     }
-    // }
 }
