--- a/scss/sections/_friends.scss
+++ b/scss/sections/_friends.scss
@@ -3,47 +3,95 @@
 ============= */
 
 #friends{
-padding: 40px 24px 80px 24px;
-background: $off-white;
+    padding: 80px 24px;
+    // background: $off-white;
 
-h2 {
-    color: $black;
-    padding-bottom: 24px;
-    span {
-        color: $agua;
+
+    h2 {
+        color: $black;
+        padding-bottom: 24px;
+        span {
+            color: $agua;
+        }
     }
-}
 
-p{
-    padding-bottom: 24px;
-}
-
-.friend-card{
-    margin: 24px 0;
-
-
-    h3{
-        background-color: $sun;
-        padding: 8px 24px;
-    }
     p{
-        background: $white;
-        padding: 16px 24px;
-        box-shadow: 0 7px 16px 2px rgba(206,206,206,0.40);
+        padding-bottom: 24px;
+    }
 
-    }
-    span{
-        font-family: 'Poppins', sans-serif;
-        font-size: rem-calc(18);
-    }
-}
+    .friend-card{
+        margin: 24px 0;
 
-ul{
-    li:nth-child(1),li:nth-child(2),li:nth-child(3) {
-        border-bottom: 8px solid $agua;
+        h3{
+            padding: 8px 24px;
+            letter-spacing: 1px;
+        }
+        p{
+            background: $white;
+            padding: 16px 24px;
+            @include shadow-style-light;
+
+        }
+        span{
+            font-family: 'Poppins', sans-serif;
+            font-size: rem-calc(18);
+        }
     }
-    li:nth-child(4),li:nth-child(5),li:nth-child(6) {
-        border-bottom: 8px solid $orange;
+
+    div:nth-child(1){
+        @include md{
+            width: 40%;
+            margin-left: 24px;
+        }
     }
-}
+
+    div:nth-child(2){
+        display: grid;
+
+        @include sm{
+            grid-template-areas:
+            "card1"
+            "card2";
+            grid-template-rows: repeat(2, auto);
+        }
+
+        @include md{
+            grid-template-areas:
+            ". card2"
+            "card1 card2"
+            "card1 card2"
+            "card1 card2"
+            "card1 card2"
+            "card1 .";
+            grid-template-rows: repeat(6, auto);
+            grid-gap: 40px;
+        }
+
+        @include lg{
+            grid-template-areas:
+            "card1 card1 card1"
+            "card2 card2 card2";
+            display: flex;
+            grid-template-rows: repeat(2, auto);
+            grid-gap: 40px;
+        }
+
+        ul:nth-child(1){
+            grid-area: card1;
+            li{
+                background-color: $light;
+                border-bottom: 8px solid $agua;
+            }
+        }
+
+        ul:nth-child(2){
+            grid-area: card2;
+            li{
+                background-color: $sun;
+                border-bottom: 8px solid $orange;
+            }
+        }
+    }
+
+
 }
