--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -28,15 +28,10 @@
 
     @include lg{
         grid-template-areas:
-        "events events events"
-        "events1 events2 events3";
-        grid-template-columns: repeat(3, auto);
-        grid-template-rows: repeat(2, auto);
-        padding: 0 80px;
-    }
-
-    @include lg{
-        padding: 0 200px;
+        ". events events1 events2 events3 .";
+        grid-template-columns: repeat(6, auto);
+        grid-template-rows: repeat(1, auto);
+        padding: 0 24px;
     }
 
     h2{
