--- a/css/styles.css
+++ b/css/styles.css
@@ -647,13 +647,10 @@ footer {
       grid-template-columns: 50% 50%; } }
   @media (min-width: 968px) {
     #events {
-      grid-template-areas: "events events events" "events1 events2 events3";
-      grid-template-columns: repeat(3, auto);
-      grid-template-rows: repeat(2, auto);
-      padding: 0 80px; } }
-  @media (min-width: 968px) {
-    #events {
-      padding: 0 200px; } }
+      grid-template-areas: ". events events1 events2 events3 .";
+      grid-template-columns: repeat(6, auto);
+      grid-template-rows: repeat(1, auto);
+      padding: 0 24px; } }
   #events h2 {
     color: #D5F8FF;
     padding-top: 80px;
@@ -710,7 +707,8 @@ footer {
       color: #D5F8FF; }
   #faq > div:nth-child(1) {
     background: linear-gradient(180deg, #4BC1B4 0%, #94C83D 120%);
-    grid-area: faq; }
+    grid-area: faq;
+    padding: 32px 24px 40px; }
     @media (min-width: 498px) {
       #faq > div:nth-child(1) {
         padding: 80px 24px 40px; } }
@@ -806,34 +804,33 @@ footer {
       font-family: 'Poppins', sans-serif;
       font-size: 1.125rem; }
   @media (min-width: 789px) {
-    #friends div:nth-child(1) {
+    #friends div:nth-child(2) {
       width: 40%;
       margin-left: 24px; } }
-  #friends div:nth-child(2) {
-    display: grid; }
-    @media (min-width: 498px) {
-      #friends div:nth-child(2) {
-        grid-template-areas: "card1" "card2";
-        grid-template-rows: repeat(2, auto); } }
+  #friends div:nth-child(3) {
+    display: grid;
+    grid-template-areas: "card1" "card2";
+    grid-template-rows: repeat(2, auto); }
     @media (min-width: 789px) {
-      #friends div:nth-child(2) {
+      #friends div:nth-child(3) {
         grid-template-areas: ". card2" "card1 card2" "card1 card2" "card1 card2" "card1 card2" "card1 .";
         grid-template-rows: repeat(6, auto);
+        grid-template-columns: repeat(2, auto);
         grid-gap: 40px; } }
     @media (min-width: 968px) {
-      #friends div:nth-child(2) {
-        grid-template-areas: "card1 card1 card1" "card2 card2 card2";
-        display: flex;
-        grid-template-rows: repeat(2, auto);
+      #friends div:nth-child(3) {
+        grid-template-areas: ". . card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 card2 ." ". card1 . .";
+        grid-template-rows: repeat(6, auto);
+        grid-template-columns: repeat(4, auto);
         grid-gap: 40px; } }
-    #friends div:nth-child(2) ul:nth-child(1) {
+    #friends div:nth-child(3) ul:nth-child(1) {
       grid-area: card1; }
-      #friends div:nth-child(2) ul:nth-child(1) li {
+      #friends div:nth-child(3) ul:nth-child(1) li {
         background-color: #D5F8FF;
         border-bottom: 8px solid #4BC1B4; }
-    #friends div:nth-child(2) ul:nth-child(2) {
+    #friends div:nth-child(3) ul:nth-child(2) {
       grid-area: card2; }
-      #friends div:nth-child(2) ul:nth-child(2) li {
+      #friends div:nth-child(3) ul:nth-child(2) li {
         background-color: #F5DA4C;
         border-bottom: 8px solid #F5A623; }
 
@@ -918,6 +915,7 @@ footer {
 #plan {
   margin: 0 auto;
   background: #4A4A4A;
+  background-image: url("../img/hero/papyrus-dark.png");
   padding: 40px 0px 80px 0px; }
   #plan h2 {
     padding-left: 24px;
@@ -938,7 +936,7 @@ footer {
     @media (min-width: 789px) {
       #plan div:nth-child(2) {
         grid-template-areas: "hike ." "hike run" "bike run" "bike .";
-        grid-gap: 24px; } }
+        grid-gap: 40px; } }
     @media (min-width: 968px) {
       #plan div:nth-child(2) {
         grid-template-areas: ". bike" "hike bike" "hike run" ". run";
@@ -960,9 +958,8 @@ footer {
         color: #D5F8FF; }
       #plan div:nth-child(2) aside > div:nth-child(2) p {
         color: #fff;
-        border-left: 8px solid #4BC1B4;
-        margin-top: 24px;
-        padding-left: 16px;
+        margin-top: 16px;
+        padding-left: 24px;
         padding-right: 24px; }
         @media (min-width: 968px) {
           #plan div:nth-child(2) aside > div:nth-child(2) p {
@@ -1011,22 +1008,24 @@ footer {
 ============= */
 #trail {
   background-color: #fff;
+  display: grid;
   grid-template-areas: "trailtop" "forbiddentrail" "whitetrail" "orangetrail" "yellowtrail";
-  grid-template-rows: repeat(5, auto); }
+  grid-template-rows: repeat(5, auto);
+  grid-template-columns: repeat(1, auto); }
   @media (min-width: 789px) {
     #trail {
       grid-template-areas: "trailtop forbiddentrail" "orangetrail orangetrail" "whitetrail yellowtrail";
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, auto); } }
   @media (min-width: 968px) {
     #trail {
       grid-template-areas: "forbiddentrail trailtop" "whitetrail orangetrail" ". yellowtrail";
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, auto); } }
   @media (min-width: 1210px) {
     #trail {
       grid-template-areas: "forbiddentrail whitetrail trailtop" ". orangetrail yellowtrail";
-      grid-template-columns: repeat(3, auto);
+      grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, auto); } }
   #trail h2 {
     padding: 80px 24px 40px 24px; }
