--- a/scss/sections/_plan.scss
+++ b/scss/sections/_plan.scss
@@ -4,6 +4,7 @@
 #plan {
     margin: 0 auto;
     background: $midnight;
+    background-image: url('../img/hero/papyrus-dark.png');
     padding: 40px 0px 80px 0px;
 
     h2 {
@@ -38,7 +39,7 @@
             "hike run"
             "bike run"
             "bike .";
-            grid-gap: 24px;
+            grid-gap: 40px;
         }
 
         @include lg{
@@ -74,9 +75,9 @@
 
                 p {
                     color: $white;
-                    border-left: 8px solid $agua;
-                    margin-top: 24px;
-                    padding-left: 16px;
+                    // border-left: 8px solid $agua;
+                    margin-top: 16px;
+                    padding-left: 24px;
                     padding-right: 24px;
                     @include lg{
                         padding-right: 0px;
